--- a/src/client/resources/assets/twochat/lang/en_us.json
+++ b/src/client/resources/assets/twochat/lang/en_us.json
@@ -1,12 +1,12 @@
 {
   "text.autoconfig.twochat.title": "2chat",
-  "text.autoconfig.twochat.posX": "Position X",
-  "text.autoconfig.twochat.posY": "Position Y",
-  "text.autoconfig.twochat.width": "Width",
-  "text.autoconfig.twochat.height": "Height",
-  "text.autoconfig.twochat.fadeTimeMs": "Fade Time (ms)",
-  "text.autoconfig.twochat.align": "Alignment",
-  "text.autoconfig.twochat.chatFlowDown": "Chat Flow Down",
-  "text.autoconfig.twochat.visible": "Visible",
-  "text.autoconfig.twochat.backgroundOpacity": "Background Opacity"
+  "text.autoconfig.twochat.option.posX": "Position X",
+  "text.autoconfig.twochat.option.posY": "Position Y",
+  "text.autoconfig.twochat.option.width": "Width",
+  "text.autoconfig.twochat.option.height": "Height",
+  "text.autoconfig.twochat.option.fadeTimeMs": "Fade Time (ms)",
+  "text.autoconfig.twochat.option.align": "Alignment",
+  "text.autoconfig.twochat.option.chatflowDown": "Chat Flow Down",
+  "text.autoconfig.twochat.option.visible": "Visible",
+  "text.autoconfig.twochat.option.backgroundOpacity": "Background Opacity"
 }
